--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
         "bcrypt": "^5.0.1",
         "bootstrap": "^5.1.3",
         "css": "^3.0.0",
-        "cloudinary": "^1.30.0",
+        "cloudinary": "^1.30.1",
         "connect-mongo": "^4.6",
         "cookie-parser": "^1.4.6",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "express-session": "^1.17.3",
         "hbs": "^4.2",
-        "mongoose": "^6.4.4",
+        "mongoose": "6.5.1",
         "morgan": "^1.10",
         "multer": "^1.4.5-lts.1",
         "multer-storage-cloudinary": "^4.0",
