--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
         "dev": "nodemon server.js"
     },
     "dependencies": {
-        "bcrypt": "^5.0.1",
-        "bootstrap": "^5.1.3",
+        "bcrypt": "^5.1.0",
+        "bootstrap": "^5.2.3",
         "css": "^3.0.0",
-        "cloudinary": "^1.30.1",
-        "connect-mongo": "^4.6",
+        "cloudinary": "^1.37.0",
+        "connect-mongo": "^5.0.0",
         "cookie-parser": "^1.4.6",
-        "dotenv": "^16.0.1",
-        "express": "^4.18.1",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
         "express-session": "^1.17.3",
-        "hbs": "^4.2",
-        "mongoose": "6.5.1",
-        "morgan": "^1.10",
+        "hbs": "^4.2.0",
+        "mongoose": "^7.2.1",
+        "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
-        "multer-storage-cloudinary": "^4.0",
-        "serve-favicon": "^2.5"
+        "multer-storage-cloudinary": "^4.0.0",
+        "serve-favicon": "^2.5.0"
     },
     "devDependencies": {
-        "nodemon": "^2.0.19"
+        "nodemon": "^2.0.22"
     }
 }
