fix: update dependencies

--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "bootstrap": "^5.3.3",
-    "cloudinary": "^2.2.0",
+    "bcrypt": "^6.0.0",
+    "bootstrap": "^5.3.6",
+    "cloudinary": "^2.6.1",
     "connect-mongo": "^5.1.0",
-    "cookie-parser": "^1.4.6",
+    "cookie-parser": "^1.4.7",
     "css": "^3.0.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "express-session": "^1.18.0",
+    "dotenv": "^16.4.7",
+    "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "hbs": "^4.2.0",
-    "mongoose": "^8.4.4",
+    "mongoose": "^8.13.1",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "semver": "^7.6.2",
+    "semver": "^7.7.1",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.9"
   }
 }
