--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "seedUsers": "node ./seeds/users.seed.js",
     "seedPosts": "node ./seeds/posts.seed.js",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "generate-secret": "node ./scripts/generate-session-secret.js",
+    "check-env": "node ./scripts/check-env-vars.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
